# squirrel-capture

./: .gitignore  README.md  classify_reolink.py  config.yaml  extract_training_frames.py  pipeline.py  pyproject.toml  requirements.txt  train_yolo.py
capture/: motion_detector.py  rtsp_stream.py
deploy/: HANDOFF.md  handoff.sh  setup.sh  squirrel-capture.service  squirrel-video-watcher.service  video_watcher.py
detection/: tracker.py  yolo_detector.py
labeling/: auto_labeler.py
models/: registry.py  registry.yaml
training/: augment_night.py  consolidate_openimages.py  download_caltech.py  download_openimages.py  export_dataset.py  extract_frames.py  extract_frames_more.py  extract_motion_frames.py  extract_motion_more.py  extract_video2.py  labelme_to_yolo.py  merge_datasets.py  merge_refined.py  prep_master_ds.py  prepare_data.py  prepare_v9.py  refine_labels.py  test_extracted_frames.py  train.py
