[project]
name = "squirrel-capture"
version = "0.1.0"
description = "Squirrel capture pipeline with auto-labeling using YOLO + Reolink RTSP"
requires-python = ">=3.10"

dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "gdown",
    "huggingface-hub",
    "openimages>=0.0.1",
    "fiftyone>=1.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.410",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["capture", "detection", "labeling", "training", "pipeline.py"]
exclude = ["venv", ".venv", "data", "runs"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
